Grant permissions to token.

--- a/.github/workflows/publish-zip.yml
+++ b/.github/workflows/publish-zip.yml
@@ -5,15 +5,17 @@ on:
     branches: [$default-branch, v2]
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+
+# Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+permissions:
+  pages: write # to deploy to Pages
+  id-token: write # to verify the deployment originates from an appropriate source
 
 jobs:
   # Build job
   build:
-    
     # Specify runner +  build & upload the static files as an artifact
     runs-on: ubuntu-latest
     steps:
