--- a/.github/workflows/publish-zip.yml
+++ b/.github/workflows/publish-zip.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Create ZIP
         run: |
           mkdir output
-          zip -r output/Bloodpoint-Farming-Macros.zip *.ahk Lib icons/*.ico *.md assets
+          zip -r output/Bloodpoint-Farming-Macros.zip *.ahk Lib icons/*.ico
 
       - name: Upload static files as artifact
         id: deployment
