--- a/.github/workflows/publish-zip.yml
+++ b/.github/workflows/publish-zip.yml
@@ -1,4 +1,4 @@
-name: Publish ZIP
+name: Test, Build, Deploy ZIP
 
 on:
   push:
@@ -15,8 +15,8 @@ permissions:
 
 jobs:
   # Build job
-  build:
-    # Specify runner +  build & upload the static files as an artifact
+  zip:
+    name: Create Bloodpoint-Farming-Macros.zip
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -35,11 +35,12 @@ jobs:
 
   # Deployment job
   deploy:
+    name: Publish Bloodpoint-Farming-Macros.zip
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
+    needs: zip
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
