--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Install AutoHotkey v2
         run: |
-          Invoke-WebRequest -Uri https://www.autohotkey.com/download/ahk-v2.exe -OutFile AHK_Setup.exe
+          Invoke-WebRequest -Uri https://github.com/AutoHotkey/AutoHotkey/releases/download/v2.0.19/AutoHotkey_2.0.19_setup.exe -OutFile AHK_Setup.exe
           Start-Process -Wait -FilePath .\AHK_Setup.exe -ArgumentList '/S'
 
       - name: Run all test files
