--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,9 +20,8 @@ jobs:
           Expand-Archive ahk.zip -DestinationPath AHK
 
       - name: Run all test files
-        shell: pwsh
-        run: |
-          .\AHK\AutoHotkey64.exe tests/test.ahk
+        shell: bash
+        run: ./AHK/AutoHotkey64.exe tests/test.ahk
 
       - name: Upload JUnit test results
         uses: actions/upload-artifact@v4
