--- a/.github/workflows/publish-zip.yml
+++ b/.github/workflows/publish-zip.yml
@@ -2,7 +2,7 @@ name: Publish ZIP
 
 on:
   push:
-    branches: [$default-branch, v2]
+    branches: [main, v2]
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 concurrency:
